<resources>
    <string name="app_name">P01-DailyGoals</string>
    <string name="goal">Did i achieve this goal today?</string>
    <string name="arrive">Arrive on times so as not to miss important part of the lesson : </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="attempt">Attempt the problem myself : </string>
    <string name="personal">My personal reflection today : </string>
</resources>
